# vlsi-systems-project

./: .gitignore  README.md
edge-vlsi-monitor/: Cargo.toml  README.md
edge-vlsi-monitor/crates/agent-runtime/: Cargo.toml
edge-vlsi-monitor/crates/agent-runtime/src/: agent.rs  inference.rs  lib.rs  model_registry.rs  scheduler.rs  state.rs
edge-vlsi-monitor/crates/agent-runtime/tests/: integration_agent.rs
edge-vlsi-monitor/crates/cli/: Cargo.toml
edge-vlsi-monitor/crates/cli/src/: main.rs
edge-vlsi-monitor/crates/dashboard/: Cargo.toml
edge-vlsi-monitor/crates/dashboard/src/: lib.rs  rest.rs  state.rs  ws.rs
edge-vlsi-monitor/crates/dashboard/tests/: integration_dashboard.rs
edge-vlsi-monitor/crates/metrics-collector/: Cargo.toml
edge-vlsi-monitor/crates/metrics-collector/src/: histogram.rs  lib.rs  power_tracker.rs  ring_buffer.rs
edge-vlsi-monitor/crates/vlsi-sim/: Cargo.toml
edge-vlsi-monitor/crates/vlsi-sim/src/: attention.rs  conv.rs  lib.rs  mac.rs  pipeline.rs  power.rs  relu.rs  thermal.rs  workload.rs
edge-vlsi-monitor/frontend/: index.html
edge-vlsi-monitor/frontend/css/: styles.css
edge-vlsi-monitor/frontend/js/: dashboard.js
edge-vlsi-monitor/rtl/: mac_unit.sv  pipeline.sv  relu_unit.sv
edge-vlsi-monitor/rtl/testbenches/: relu_tb.sv
edge-vlsi-monitor/tests/: integration_sim.rs
plots/: plot_experiment1.py  plot_experiment2.py  plot_experiment3.py  plot_experiment5.py  plot_experiment6.py  plot_experiment7.py  plot_experiment8.py
vlsi-ai-integration/: README.md  requirements.txt  setup.py
vlsi-ai-integration/data/models/: mnist_cnn.h5  mnist_cnn.tflite
vlsi-ai-integration/scripts/: benchmark.py  benchmark_with_cpp.py  run_simulation.py  test_concurrency.py  train_model.py
vlsi-ai-integration/src/ai_models/: __init__.py  cnn_trainer.py  model_utils.py  tflite_converter.py
vlsi-ai-integration/src/benchmarking/: __init__.py  comparison_utils.py  performance_analyzer.py  power_estimator.py
vlsi-ai-integration/src/dashboard/: __init__.py  api.py
vlsi-ai-integration/src/dashboard/static/css/: styles.css
vlsi-ai-integration/src/dashboard/static/js/: dashboard.js
vlsi-ai-integration/src/dashboard/templates/: index.html
vlsi-ai-integration/src/hardware/cpp/: compile.sh  cpp_interface.py  hardware_simulator.cpp
vlsi-ai-integration/src/hardware/simulation/: __init__.py  hardware_sim.py  hardware_sim_concurrent.py  pipeline_concurrent.py  race_condition_demo.py  verilog_interface.py
vlsi-ai-integration/src/hardware/systemverilog/testbenches/: mac_tb.sv
vlsi-ai-integration/src/integration/: __init__.py  pipeline_controller.py  tflite_hw_bridge.py
vlsi-ai-integration/tests/: test_ai_models.py  test_hardware.py  test_integration.py
