[workspace]
resolver = "2"
members = [
    "crates/vlsi-sim",
    "crates/agent-runtime",
    "crates/metrics-collector",
    "crates/dashboard",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aditya Suresh"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
ndarray = { version = "0.16", features = ["serde"] }
