[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
ndarray = { workspace = true }

vlsi-sim = { path = "../vlsi-sim" }
metrics-collector = { path = "../metrics-collector" }

tract-onnx = "0.21"
