[package]
name = "edge-vlsi-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "edge-vlsi"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ndarray = { workspace = true }

vlsi-sim = { path = "../vlsi-sim" }
agent-runtime = { path = "../agent-runtime" }
metrics-collector = { path = "../metrics-collector" }
dashboard = { path = "../dashboard" }

clap = { version = "4", features = ["derive"] }
sysinfo = "0.33"
comfy-table = "7.1"
num_cpus = "1.16"
