[package]
name = "dashboard"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ndarray = { workspace = true }

vlsi-sim = { path = "../vlsi-sim" }
agent-runtime = { path = "../agent-runtime" }
metrics-collector = { path = "../metrics-collector" }

anyhow = { workspace = true }

axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
