[package]
name = "vlsi-sim"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
tracing = { workspace = true }
rayon = "1.10"

[dev-dependencies]
approx = "0.5"
